package TH1.CA5;

public interface Sub {
    double KiemTraSoDu();
    void NhanThongBao(String mes);
}
